// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/columns/Car opens modal 1`] = `
<td
  className="success clickableCell"
>
  <button
    className="cellButton"
    onClick={[Function]}
    onKeyPress={[Function]}
    type="button"
  >
    <StarIcon />
    <span>
       
    </span>
    Mazda Cup
  </button>
  <CarModal
    carIds={
      Array [
        4,
        5,
      ]
    }
    favouriteCars={
      Array [
        4,
      ]
    }
    isOpen={false}
    onClose={[Function]}
    ownedCars={
      Array [
        5,
      ]
    }
    seriesName="Mazda Cup"
  />
</td>
`;

exports[`components/columns/Car opens modal 2`] = `
<td
  className="success clickableCell"
>
  <button
    className="cellButton"
    onClick={[Function]}
    onKeyPress={[Function]}
    type="button"
  >
    <StarIcon />
    <span>
       
    </span>
    Mazda Cup
  </button>
  <CarModal
    carIds={
      Array [
        4,
        5,
      ]
    }
    favouriteCars={
      Array [
        4,
      ]
    }
    isOpen={false}
    onClose={[Function]}
    ownedCars={
      Array [
        5,
      ]
    }
    seriesName="Mazda Cup"
  />
</td>
`;

exports[`components/columns/Car renders correctly 1`] = `
<td
  className="clickableCell"
>
  <button
    className="cellButton"
    onClick={[Function]}
    onKeyPress={[Function]}
    type="button"
  >
    <span>
       
    </span>
    Mazda Cup
  </button>
  <CarModal
    carIds={
      Array [
        4,
        5,
      ]
    }
    favouriteCars={Array []}
    isOpen={false}
    onClose={[Function]}
    ownedCars={Array []}
    seriesName="Mazda Cup"
  />
</td>
`;

exports[`components/columns/Car renders owned, favourite 1`] = `
<td
  className="success clickableCell"
>
  <button
    className="cellButton"
    onClick={[Function]}
    onKeyPress={[Function]}
    type="button"
  >
    <StarIcon />
    <span>
       
    </span>
    Mazda Cup
  </button>
  <CarModal
    carIds={
      Array [
        4,
        5,
      ]
    }
    favouriteCars={
      Array [
        4,
      ]
    }
    isOpen={false}
    onClose={[Function]}
    ownedCars={
      Array [
        5,
      ]
    }
    seriesName="Mazda Cup"
  />
</td>
`;
